# TACTANOTES

./: .gitignore  README.md  fix_project.sh  verify_e2e.sh
tactanotes_core/: Cargo.toml  tactanotes.db-shm  tactanotes.db-wal  tactanotes_cli.db-shm  tactanotes_cli.db-wal  test.db
tactanotes_core/src/: api.rs  engine.rs  frb_generated.rs  lib.rs  main.rs  ocr.rs
tactanotes_core/src/ai/: asr.rs  lang.rs  llm.rs  manager.rs  mod.rs  rag.rs  text.rs
tactanotes_core/src/audio/: buffer.rs  capture.rs  dsp.rs  mod.rs  resampler.rs  vad.rs
tactanotes_core/src/engine/: endurance.rs
tactanotes_core/src/storage/: db.rs  mod.rs  security.rs  sync.rs
tactanotes_core/tests/: real_asr_test.rs  resampler_test.rs  torture_test.rs
tactanotes_ui/: README.md  build_macos.sh  pubspec.yaml  setup_models.sh
tactanotes_ui/android/app/: build.gradle.kts
tactanotes_ui/android/app/src/main/: AndroidManifest.xml
tactanotes_ui/android/app/src/main/kotlin/com/example/tactanotes_ui/: MainActivity.kt
tactanotes_ui/ios/Runner/: Info.plist
tactanotes_ui/ios/Runner.xcodeproj/: project.pbxproj
tactanotes_ui/lib/: bridge_definitions.dart  main.dart
tactanotes_ui/lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
tactanotes_ui/lib/providers/: engine_provider.dart
tactanotes_ui/lib/screens/: home_screen.dart  login_screen.dart  note_detail_screen.dart  recording_screen.dart
tactanotes_ui/lib/services/: cloud_sync_service.dart  doc_importer.dart  registration_service.dart
tactanotes_ui/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
tactanotes_ui/lib/widgets/: annotation_canvas.dart  drawing_canvas.dart  folder_sidebar.dart  pdf_viewer_stub.dart  stealth_mode_overlay.dart
tactanotes_ui/linux/: CMakeLists.txt
tactanotes_ui/linux/runner/: my_application.cc
tactanotes_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
tactanotes_ui/macos/Runner/: Info.plist
tactanotes_ui/macos/Runner.xcodeproj/: project.pbxproj
tactanotes_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
tactanotes_ui/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig
tactanotes_ui/test/: stealth_mode_test.dart  widget_test.dart
tactanotes_ui/test_driver/: app.dart  app_test.dart
tactanotes_ui/web/: index.html  manifest.json
tactanotes_ui/windows/: CMakeLists.txt
tactanotes_ui/windows/runner/: Runner.rc  main.cpp
