[package]
name = "tactanotes_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio
cpal = "0.15"
rubato = "0.14" # High-fidelity Sinc Resampling
dasp = { version = "0.11", features = ["signal", "interpolate", "window"] }

# Storage
rusqlite = { version = "0.29", features = ["bundled"] }

# AI / ML
tract-onnx = "0.20"
whisper-rs = "0.11"

# Crypto
ring = "0.16"

# OS / Memory
memmap2 = "0.7"
mimalloc = { version = "0.1", default-features = false }

# Utils
anyhow = "1.0"
thiserror = "1.0"
# v5.3 Sync Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.36" # Fix for E0282
flutter_rust_bridge = "2.0" # Match codegen version
lazy_static = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
